[workspace]

[package]
name = "aws-nitro-enclaves-cose"
version = "0.3.0"
authors = ["Petre Eftime <epetre@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["COSE"]
categories = ["cryptography"]
repository = "https://github.com/awslabs/aws-nitro-enclaves-cose"
description = "This library aims to provide a safe Rust implementation of COSE, with COSE Sign1 currently implemented."

[dependencies]
serde_cbor = { version="0.11", features = ["tags"] }
serde_repr = "0.1"
serde_bytes = "0.11"
serde_with = "1.5"
openssl = { version = "0.10", optional = true }
mbedtls8 = { git = "https://github.com/fortanix/rust-mbedtls", package = "mbedtls", branch = "acruceru/port-async-support", features = ["rdrand", "std", "dsa"], optional = true, default-features = false  }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["crypto_openssl", "key_openssl_pkey"]
key_openssl_pkey = ["crypto_openssl", "openssl"]
crypto_openssl = ["openssl"]

crypto_mbedtls = ["key_mbedtls_pkey", "mbedtls8"]
key_mbedtls_pkey = ["mbedtls8"]

migration_mode=["mbedtls8/migration_mode"]

[patch.crates-io]
libc  = { git = "https://github.com/fortanix/libc.git", branch = "fortanixvme" }
